[gd_scene load_steps=6 format=3 uid="uid://c2x4lisclhlpc"]

[ext_resource type="Script" uid="uid://dhefnnii02gxn" path="res://scenes/GUI/shared/descriptions/gui_power_description.gd" id="1_wwkjn"]
[ext_resource type="PackedScene" uid="uid://birms1nlswekw" path="res://scenes/GUI/bingo_main/power/gui_power.tscn" id="2_lvj58"]
[ext_resource type="PackedScene" uid="uid://bfye3pwakcidx" path="res://scenes/GUI/shared/descriptions/gui_tooltip_description_separator.tscn" id="3_886ft"]
[ext_resource type="PackedScene" uid="uid://dlyb6tguwdg1f" path="res://scenes/GUI/shared/descriptions/gui_power_cd_icon.tscn" id="3_lvj58"]
[ext_resource type="PackedScene" uid="uid://defua0wjy7nqc" path="res://scenes/GUI/shared/descriptions/gui_description_rich_text_label.tscn" id="5_886ft"]

[node name="GUIPowerDescription" type="VBoxContainer"]
custom_minimum_size = Vector2(56, 0)
offset_right = 57.0
offset_bottom = 44.0
theme_override_constants/separation = 2
script = ExtResource("1_wwkjn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="GUIPower" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("2_lvj58")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HUD_mid"
text = "Egg"
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 2

[node name="GUIPowerCDIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_lvj58")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUITooltipDescriptionSaparator" parent="." instance=ExtResource("3_886ft")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUIDescriptionRichTextLabel" parent="." instance=ExtResource("5_886ft")]
unique_name_in_owner = true
layout_mode = 2
text = "adfasdfasdfs"
